<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Kollegen</string>
    <string name="login_online_username_hint">Benutzername</string>
    <string name="login_online_login_label">Anmelden</string>
    <string name="hint_control_mapping">"Tippe auf das Zahnradsymbol oben in der Mitte, um das Kontextmenü zu öffnen ⚙.\nTippe auf eine Schaltfläche, um sie anzupassen: Bearbeiten, Größe ändern, Löschen oder die Tastenzuordnung ändern."</string>
    <string name="warning_remove_account">Dieses Konto wird entfernt!</string>
    <string name="alerttitle_installmod">Wähle einen Mod-Installer</string>
    <string name="error_fatal">Kollegen ist unerwartet abgestürzt</string>
    <string name="error_no_version">Keine Version!</string>
    <string name="error_show_more">Mehr anzeigen</string>
    <string name="error_show_less">Weniger anzeigen</string>
    <string name="toast_permission_denied">Die Lese-/Schreib-Berechtigung für den Speicher ist erforderlich!</string>
    <string name="toast_optifine_success">Installation erfolgreich</string>
    <string name="mcl_tab_wiki">Wiki</string>
    <string name="mcl_launch_cleancache">Cache-Dateien bereinigen</string>
    <string name="mcl_launch_downloading">Lade %s herunter</string>
    <string name="mcl_launch_downloading_progress">"Lade %s herunter (%.2f MB / %.2f MB)"</string>
    <string name="mcl_launch_download_assets">Bereite das Herunterladen der Ressourcen vor</string>
    <string name="mcl_options">Optionen</string>
    <string name="mcl_option_customcontrol">Benutzerdefinierte Steuerung</string>
    <string name="mcl_setting_title_use_surface_view">Verwende alternatives Oberflächen-Rendering</string>
    <string name="mcl_setting_subtitle_use_surface_view">Kann die Leistung in GPU abhängigen Szenarien verbessern.</string>
    <string name="mcl_setting_title_ignore_notch">Ignoriere die Kameraeinkerbung</string>
    <string name="mcl_setting_subtitle_ignore_notch">Ignoriert die Kammeraeinkerbung im Bildschirm und erweitert den Bildschirm unter ihr.\nErmöglicht eine immersivere Erfahrung.</string>
    <string name="mcl_setting_title_resolution_scaler">Auflösungsskallierung</string>
    <string name="mcl_setting_subtitle_resolution_scaler">Ermöglicht das Verringern der Spielauflösung. 100% entspricht der vollen Auflösung.</string>
    <string name="mcl_setting_title_longpresstrigger">Verzögerung nach langem Drücken des Triggers</string>
    <string name="mcl_setting_subtitle_longpresstrigger">Verzögerung für langes drücken des Triggers für das Zerstören von Blöcken oder fallen lassen von Gegenständen ändern.</string>
    <string name="mcl_setting_title_buttonscale">Größe der Steuerelemente</string>
    <string name="mcl_setting_subtitle_buttonscale">Tasten vergrößern, wenn sie zu klein sind.</string>
    <string name="mcl_setting_title_mousescale">Größe der Maus</string>
    <string name="mcl_setting_subtitle_mousescale">Größe der virtuellen Maus ändern.</string>
    <string name="mcl_setting_title_javaargs">JVM-Start-Argumente</string>
    <string name="mcl_setting_subtitle_javaargs">Achtung! Das Verändern dieser Argumente ohne Fachwissen kann zu Abstürzen führen!</string>
    <string name="mcl_setting_title_renderer_settings">Zusätzliche Renderer-Einstellungen</string>
    <string name="mcl_setting_title_renderer_subtitle">Renderer-spezifische Einstellungen</string>
    <string name="mcl_setting_category_renderer">Renderer</string>
    <string name="mcl_setting_renderer_gles2_4">Holy GL4ES - (1.21.4&lt; nur, schnell)</string>
    <string name="mcl_setting_renderer_vulkan_zink">Zink (Vulkan) - (alle Versionen, mittel)</string>
    <string name="mcl_setting_renderer_mobileglues">MobileGlues (OpenGL ES) - (nur 1.17+, schnell)</string>
    <string name="mcl_setting_renderer_ltw">LTW (OpenGL ES 3) - nur 1.17+</string>
    <string name="mcl_setting_veroption_release">Vollversionen</string>
    <string name="mcl_setting_veroption_snapshot">Entwicklungsversionen</string>
    <string name="mcl_setting_veroption_oldalpha">Old-Alpha</string>
    <string name="mcl_setting_veroption_oldbeta">Old-Beta</string>
    <string name="mcl_version_clone">Duplizieren</string>
    <string name="global_edit">Bearbeiten</string>
    <string name="global_error">Fehler</string>
    <string name="global_load">Laden</string>
    <string name="global_name">Namen</string>
    <string name="global_remove">Entfernen</string>
    <string name="global_clone">Duplizieren</string>
    <string name="global_restart">Neustart</string>
    <string name="global_save">Speichern</string>
    <string name="global_unpacking">Entpacke %s</string>
    <string name="global_error_field_empty">Dieses Feld darf nicht leer sein</string>
    <string name="global_waiting">Bitte warten</string>
    <string name="global_select">Auswählen</string>
    <string name="global_retry">Erneut versuchen</string>
    <string name="global_default">Standard</string>
    <string name="global_off">Aus</string>
    <string name="mcn_exit_title">Anwendung/Spiel wurde mit dem Code %d beendet. Für weitere Details, siehe latestlog.txt.</string>
    <string name="mcn_signal_title">Anwendung/Spiel wurde mit dem Fehlercode %d beendet. Für weitere Details, siehe latestlog.txt.</string>
    <string name="mcn_exit_confirm">Beenden wirklich erzwingen?</string>
    <string name="mcn_check_fail_vulkan_support">Der Zink-Renderer (Vulkan) wird auf diesem Gerät nicht unterstützt!</string>
    <string name="control_chat">Chat</string>
    <string name="control_debug">Debuggen</string>
    <string name="control_primary">Pri</string>
    <string name="control_secondary">Sek</string>
    <string name="control_shift">◇</string>
    <string name="control_inventory">Inv</string>
    <string name="control_up">▲</string>
    <string name="control_left">◀</string>
    <string name="control_right">▶</string>
    <string name="control_down">▼</string>
    <string name="control_jump">⬛</string>
    <string name="control_thirdperson">3. Person</string>
    <string name="control_listplayers">Tab</string>
    <string name="control_mouse">Maus</string>
    <string name="control_mouseoff">Maus: Aus</string>
    <string name="control_mouseon">Maus: An </string>
    <string name="control_forceclose">Erzwinge das Beenden</string>
    <string name="control_viewout">Protokoll-Ausgabe</string>
    <string name="control_adebug">Eingabe-Debugging</string>
    <string name="control_customkey">Selbstdefinierten Tastencode senden</string>
    <string name="import_control_label">Steuerung importieren</string>
    <string name="import_control_invalid_file">Ungültige oder beschädigte Datei</string>
    <string name="import_control_import_button">Steuerung importieren</string>
    <string name="import_control_verifying_file">Datei wird verifiziert, bitte warten und erneut versuchen…</string>
    <string name="import_control_invalid_name">Ungültiger Dateiname oder Datei bereits vorhanden</string>
    <string name="import_control_done">Import abgeschlossen</string>
    <string name="customctrl_toggle">Umschaltbar</string>
    <string name="customctrl_size">Größe</string>
    <string name="customctrl_mapping">Zuordnung</string>
    <string name="customctrl_orientation">Ausrichtung</string>
    <string name="customctrl_background_color">Hintergrundfarbe</string>
    <string name="customctrl_corner_radius">Eckenradius</string>
    <string name="customctrl_stroke_width">Strichbreite</string>
    <string name="customctrl_stroke_color">Strichfarbe</string>
    <string name="customctrl_button_opacity">Deckkraft der Schaltflächen</string>
    <string name="customctrl_addbutton">Taste hinzufügen</string>
    <string name="customctrl_addbutton_drawer">Schaltflächengruppe hinzufügen</string>
    <string name="customctrl_addbutton_joystick">Joystick hinzufügen</string>
    <string name="customctrl_addsubbutton">Sub-Schaltfläche hinzufügen</string>
    <string name="customctrl_selectdefault">Standard-Steuerung auswählen</string>
    <string name="customctrl_export">Steuerung exportieren</string>
    <string name="main_share_logs">Protokoll-/Logdatei teilen</string>
    <string name="main_install_jar_file">.jar ausführen</string>
    <string name="main_play">Spielen</string>
    <string name="autoram_info_msg">Es wurden %d MB Arbeitsspeicher zugewiesen</string>
    <string name="mcl_setting_check_libraries">Bibliotheken nach dem Download überprüfen</string>
    <string name="mcl_setting_check_libraries_subtitle">Diese Option zwingt den Launcher dazu, den Hash der Bibliothek zu überprüfen, falls er verfügbar ist. Verhindert fehlerhafte Downloads.</string>
    <string name="dl_library_sha_fail">Die Bibliothek %s ist beschädigt und wird erneut heruntergeladen</string>
    <string name="dl_library_sha_unknown">Die Bibliothek %s konnte nicht überprüft werden. Es wird angenommen, dass sie unbeschädigt ist</string>
    <string name="dl_library_sha_pass">Die Bibliothek %s ist unbeschädigt und verwendbar</string>
    <string name="mcl_gamepad_SDL">SDL Controller-Backend aktivieren</string>
    <string name="mcl_gamepad_SDL_subtitle">Aktiviert das SDL Controller-Backend. Hat einen besseren Mod Support. Fällt auf GLFW zurück, falls nicht verwendet.</string>
    <string name="mcl_disable_gestures">Gesten deaktivieren</string>
    <string name="mcl_disable_gestures_subtitle">Deaktiviert Gesten wie halten, um Blöcke abzubauen und tippen um Blöcke zu platzieren.</string>
    <string name="mcl_disable_swap_hand">Doppeltes Tippen zum Tauschen der Hände deaktivieren</string>
    <string name="mcl_disable_swap_hand_subtitle">Deaktiviert doppeltes Tippen auf einen Hotbar-Gegenstand, um ihn mit der zweiten Hand zu tauschen.</string>
    <string name="mcl_setting_title_mousespeed">Mausgeschwindigkeit</string>
    <string name="mcl_setting_subtitle_mousespeed">Ändert die Geschwindigkeit der virtuellen Maus.</string>
    <string name="mcl_button_discord">Discord</string>
    <string name="kollegen_login_button">Mit Discord anmelden</string>
    <string name="kollegen_friend_code_hint">Freundescode</string>
    <string name="kollegen_add_friend">Freund hinzufügen</string>
    <string name="kollegen_no_friends">Noch keine Freunde. Füge einen Freund mit seinem Code hinzu.</string>
    <string name="koll_tagline"></string>
    <string name="koll_nav_games">Spiele</string>
    <string name="koll_nav_social">Soziales</string>
    <string name="koll_nav_settings">Einstellungen</string>
    <string name="koll_games_title">Spiele</string>
    <string name="koll_games_subtitle">Wähle ein Spiel, um loszulegen</string>
    <string name="koll_game_mc_tile">MC</string>
    <string name="koll_game_minecraft">Minecraft</string>
    <string name="koll_game_mc_desc">Spiele Minecraft mit deinen Freunden auf Kollegen</string>
    <string name="koll_game_world_tile">W</string>
    <string name="koll_game_world">WORLD</string>
    <string name="koll_game_world_desc">Entdecke die Kollegen-Welt</string>
    <string name="koll_game_clicker_tile">C</string>
    <string name="koll_game_clicker">Clicker</string>
    <string name="koll_game_clicker_desc">Das klassische Kollegen-Clicker-Spiel</string>
    <string name="koll_mc_title">Minecraft</string>
    <string name="koll_mc_subtitle">Kollegen-Launcher &amp; Instanzen</string>
    <string name="koll_settings_design">Design</string>
    <string name="koll_settings_theme">App-Design</string>
    <string name="koll_settings_launcher">Launcher</string>
    <string name="koll_settings_more">Launcher-Einstellungen</string>
    <string name="koll_settings_about">Über</string>
    <string name="koll_settings_about_text">Kollegen ist eine unabhängige Minecraft-Community und Launcher-App.</string>
    <string name="koll_settings_update_check">Nach Updates suchen</string>
    <string name="mcl_button_open_directory">Spielverzeichnis öffnen</string>
</resources>