<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_menu_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_app"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_large">

        <TextView
            android:id="@+id/mc_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/koll_mc_title"
            android:textColor="@color/koll_accent"
            android:textSize="@dimen/_26ssp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/mc_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_12sdp"
            android:text="@string/koll_mc_subtitle"
            android:textColor="@color/koll_muted"
            android:textSize="@dimen/_12ssp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.kdt.mcgui.mcVersionSpinner
                android:id="@+id/mc_version_spinner"
                android:layout_width="0dp"
                android:layout_height="@dimen/_50sdp"
                android:layout_weight="1"
                android:background="@drawable/koll_panel_bg"
                android:drawableEnd="@drawable/spinner_arrow"
                android:paddingHorizontal="@dimen/_8sdp"
                app:drawableEndSize="@dimen/padding_heavy"
                app:drawableStartIntegerScaling="true"
                app:drawableStartSize="@dimen/_36sdp"
                app:drawableEndPadding="@dimen/_1sdp" />

            <ImageButton
                android:id="@+id/edit_profile_button"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginStart="@dimen/padding_small"
                android:background="?android:attr/selectableItemBackground"
                android:src="@drawable/ic_edit_profile" />
        </LinearLayout>

        <com.kdt.mcgui.MineButton
            android:id="@+id/play_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_60sdp"
            android:layout_marginTop="@dimen/_14sdp"
            android:text="@string/main_play"
            android:textAllCaps="false"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginTop="@dimen/_14sdp"
            android:layout_marginBottom="@dimen/_4sdp"
            android:background="@color/koll_border" />

        <LinearLayout
            android:id="@+id/koll_mc_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/koll_panel_bg"
            android:orientation="vertical"
            android:paddingTop="@dimen/padding_small"
            android:paddingBottom="@dimen/padding_small">

            <com.kdt.mcgui.LauncherMenuButton
                android:id="@+id/custom_control_button"
                style="@style/LauncherMenuButton.Universal"
                android:layout_width="match_parent"
                android:drawableStart="@drawable/ic_menu_custom_controls"
                android:text="@string/mcl_option_customcontrol" />

            <com.kdt.mcgui.LauncherMenuButton
                android:id="@+id/install_jar_button"
                style="@style/LauncherMenuButton.Universal"
                android:layout_width="match_parent"
                android:drawableStart="@drawable/ic_menu_install_jar"
                android:text="@string/main_install_jar_file" />

            <com.kdt.mcgui.LauncherMenuButton
                android:id="@+id/open_files_button"
                style="@style/LauncherMenuButton.Universal"
                android:layout_width="match_parent"
                android:drawableStart="@drawable/ic_folder"
                android:text="@string/mcl_button_open_directory" />

            <com.kdt.mcgui.LauncherMenuButton
                android:id="@+id/share_logs_button"
                style="@style/LauncherMenuButton.Universal"
                android:layout_width="match_parent"
                android:drawableStart="@android:drawable/ic_menu_share"
                android:text="@string/main_share_logs" />

            <com.kdt.mcgui.LauncherMenuButton
                android:id="@+id/discord_button"
                style="@style/LauncherMenuButton.Universal"
                android:layout_width="match_parent"
                android:drawableStart="@drawable/ic_discord"
                android:text="@string/mcl_button_discord" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>