<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/koll_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/koll_bg">

    <LinearLayout
        android:id="@+id/koll_root_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/padding_medium"
        android:paddingEnd="@dimen/padding_medium"
        android:paddingTop="@dimen/_12sdp"
        android:paddingBottom="@dimen/_8sdp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/koll_root_icon"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:src="@drawable/ic_kollegen"
                app:tint="@color/koll_accent"
                android:importantForAccessibility="no" />

            <TextView
                android:id="@+id/koll_root_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding_medium"
                android:text="@string/app_name"
                android:textColor="@color/koll_accent"
                android:textSize="@dimen/_22ssp"
                android:textStyle="bold" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/koll_root_tagline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/koll_tagline"
                android:textColor="@color/koll_muted"
                android:textSize="@dimen/_11ssp" />
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/koll_root_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:id="@+id/koll_nav_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_56sdp"
        android:orientation="horizontal"
        android:background="@color/koll_panel2">

        <Button
            android:id="@+id/koll_nav_games"
            style="@style/KollTabButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/koll_nav_games"
            android:textStyle="bold" />

        <Button
            android:id="@+id/koll_nav_social"
            style="@style/KollTabButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/koll_nav_social" />

        <Button
            android:id="@+id/koll_nav_settings"
            style="@style/KollTabButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/koll_nav_settings" />
    </LinearLayout>
</LinearLayout>